[#167]refactor: 리뷰 반영 BadWordResponse 응답 안에 비속어 여부(boolean)를 포함하여 반환하게 수정하였다. 이외에는 자잘한 리뷰 변경사항 적용.